--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.13)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/")
 
 # Check if we are solo or as part of a larger project
@@ -9,25 +9,25 @@ else()
   set(subproject OFF)
 endif()
 
-project(lace VERSION 1.2 LANGUAGES C)
+project(lace
+    VERSION 1.2
+    DESCRIPTION "Lace, a work-stealing framework for multi-core fork-join parallelism"
+    HOMEPAGE_URL "https://github.com/trolando/lace"
+    LANGUAGES C
+)
 
 include(CheckSymbolExists)
 include(CMakeDependentOption)
-
-set(PROJECT_DESCRIPTION "Lace, a work-stealing framework for multi-core fork-join parallelism")
-set(PROJECT_URL "https://github.com/trolando/lace")
 
 message(STATUS "CMake build configuration for Lace ${PROJECT_VERSION}")
 message(STATUS "OS: ${CMAKE_SYSTEM_NAME}")
 message(STATUS "Compiler: ${CMAKE_C_COMPILER_ID}")
 
 if(NOT CMAKE_BUILD_TYPE)
-    set(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel." FORCE)
+    set(CMAKE_BUILD_TYPE RelWithDebInfo
+            CACHE STRING "Choose the type of build, options are: None Debug Release RelWithDebInfo MinSizeRel."
+            FORCE)
 endif(NOT CMAKE_BUILD_TYPE)
-
-# Set the C standard; this is a directory scope variable, so does not propagate to parent scopes
-# set(CMAKE_C_STANDARD 11)
-# set(CMAKE_C_STANDARD_REQUIRED ON)
 
 option(LACE_PIE_TIMES "Let Lace record Pie times" OFF)
 option(LACE_COUNT_TASKS "Let Lace record the number of tasks" OFF)
@@ -40,19 +40,30 @@ cmake_dependent_option(LACE_BUILD_BENCHMARKS "Build Lace benchmark programs" OFF
 
 check_symbol_exists(mmap "sys/mman.h" HAVE_MMAP)
 if(LACE_USE_MMAP AND NOT HAVE_MMAP)
-  message(WARNING "mmap not found: disabling mmap support")
-  set(LACE_USE_MMAP OFF)
+    message(WARNING "mmap not found: disabling mmap support")
+    set(LACE_USE_MMAP OFF)
 endif()
 
-
-add_library(lace STATIC lace.c lace.h)
-target_include_directories(lace PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+add_library(lace STATIC)
+target_sources(lace PRIVATE src/lace.c ${CMAKE_CURRENT_BINARY_DIR}/include/lace.h)
+set_target_properties(lace PROPERTIES PUBLIC_HEADER "${CMAKE_CURRENT_BINARY_DIR}/include/lace.h")
+target_include_directories(lace 
+    PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
+        $<INSTALL_INTERFACE:include>
+)
 target_compile_options(lace PRIVATE -Wall -Wextra -Werror -fno-strict-aliasing)
 target_compile_features(lace PRIVATE c_std_11)
 target_link_libraries(lace PUBLIC pthread)
 
-add_library(lace14 STATIC lace14.c lace14.h)
-target_include_directories(lace14 PUBLIC ${CMAKE_CURRENT_BINARY_DIR})
+add_library(lace14 STATIC)
+target_sources(lace14 PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/lace14.c ${CMAKE_CURRENT_BINARY_DIR}/include/lace14.h)
+set_target_properties(lace14 PROPERTIES PUBLIC_HEADER "${CMAKE_CURRENT_BINARY_DIR}/include/lace14.h")
+target_include_directories(lace14
+    PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
+        $<INSTALL_INTERFACE:include>
+)
 target_compile_options(lace14 PRIVATE -Wall -Wextra -Werror -fno-strict-aliasing)
 target_compile_features(lace14 PRIVATE c_std_11)
 target_link_libraries(lace14 PUBLIC pthread)
@@ -63,8 +74,17 @@ if(LACE_USE_HWLOC)
     target_link_libraries(lace14 PUBLIC ${HWLOC_LIBRARIES})
 endif()
 
-configure_file(lace_config.h.in lace_config.h)
-add_custom_command(OUTPUT lace.h lace14.h lace14.c COMMAND ./gen.sh "${CMAKE_CURRENT_BINARY_DIR}" WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DEPENDS lace.sh lace.c)
+add_custom_command(
+    OUTPUT
+        ${CMAKE_CURRENT_BINARY_DIR}/include/lace.h
+        ${CMAKE_CURRENT_BINARY_DIR}/include/lace14.h
+        ${CMAKE_CURRENT_BINARY_DIR}/lace14.c
+    COMMAND src/gen.sh "${CMAKE_CURRENT_BINARY_DIR}"
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    DEPENDS src/lace.sh src/lace.c
+)
+
+configure_file(src/lace_config.h.in lace_config.h)
 
 if(LACE_BUILD_BENCHMARKS)
     add_subdirectory(benchmarks)
@@ -77,26 +97,36 @@ if(LACE_TEST)
 endif()
 
 # Setup installing and pkg-config
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/lace.pc.in" "${CMAKE_CURRENT_BINARY_DIR}/lace.pc" @ONLY)
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/src/lace.pc.in" "${CMAKE_CURRENT_BINARY_DIR}/lace.pc" @ONLY)
 
 include(GNUInstallDirs)
-install(TARGETS lace lace14 DESTINATION "${CMAKE_INSTALL_LIBDIR}")
+install(TARGETS lace lace14
+    EXPORT lace-export
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+    INCLUDES DESTINATION include
+)
+install(EXPORT lace-export
+    FILE
+        LaceTargets.cmake
+    NAMESPACE
+        lace::
+    DESTINATION
+        ${CMAKE_INSTALL_LIBDIR}/cmake/lace
+)
 install(FILES
-    ${CMAKE_CURRENT_BINARY_DIR}/lace.h
-    ${CMAKE_CURRENT_BINARY_DIR}/lace14.h
-    ${CMAKE_CURRENT_BINARY_DIR}/lace_config.h
-    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
-install(FILES
-    ${CMAKE_CURRENT_BINARY_DIR}/lace.pc
-    DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
+        ${CMAKE_CURRENT_BINARY_DIR}/lace.pc
+    DESTINATION
+        ${CMAKE_INSTALL_LIBDIR}/pkgconfig
+)
 
 if(NOT subproject)
     # Setup basic CPack support
     set(CPACK_PACKAGE_VENDOR "tvandijk")
     set(CPACK_PACKAGE_DESCRIPTION_SUMMARY ${PROJECT_DESCRIPTION})
-    set(CMAKE_PROJECT_HOMEPAGE ${PROJECT_URL})
-    set(CMAKE_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")
-    set(CMAKE_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/Readme.md")
+    set(CMAKE_PROJECT_HOMEPAGE_URL ${PROJECT_URL})
+    set(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE")
+    set(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README.md")
     set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
     set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
     set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
