Retire gettimeofday and use clock_gettime instead

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,7 @@ add_custom_command(
         ${CMAKE_CURRENT_BINARY_DIR}/lace14.c
     COMMAND src/gen.sh "${CMAKE_CURRENT_BINARY_DIR}"
     WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-    DEPENDS src/lace.sh src/lace.c
+    DEPENDS src/lace.sh src/lace.c lace_config.h
 )
 
 configure_file(src/lace_config.h.in lace_config.h)
