--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -5,6 +5,14 @@ on:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+  workflow_dispatch:
+    inputs:
+      debug_enabled:
+        description: 'Run with tmate'     
+        required: false
+        default: false
+
+
 
 jobs:
   linux-build:
@@ -41,6 +49,10 @@ jobs:
         export CXX=${{env.cxx}}
         cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DLACE_BUILD_BENCHMARKS=ON
         cmake --build ${{github.workspace}}/build --config ${{matrix.build_type}}
+
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+      if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.debug_enabled }}
 
     - name: Test
       working-directory: ${{github.workspace}}/build
@@ -90,6 +102,10 @@ jobs:
         fi
         cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{matrix.build_type}} -DLACE_BUILD_BENCHMARKS=ON
         cmake --build ${{github.workspace}}/build --config ${{matrix.build_type}}
+
+    - name: Setup tmate session
+      uses: mxschmitt/action-tmate@v3
+      if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.debug_enabled }}
 
     - name: Test
       working-directory: ${{github.workspace}}/build
