--- a/src/lace.pc.in
+++ b/src/lace.pc.in
@@ -7,4 +7,4 @@ URL: @PROJECT_URL@
 Version: @PROJECT_VERSION@
 Cflags: -I${includedir}
 Libs: -L${libdir} -lpthread -lm
-Requires: hwloc
+Requires: pthread
