Actually turn off mmap if not found in CMake build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ option(LACE_USE_MMAP "Let Lace use mmap to allocate memory" ON)
 if(LACE_USE_MMAP)
     check_symbol_exists(mmap "sys/mman.h" HAVE_MMAP)
     if(NOT HAVE_MMAP)
-        message(ERROR "mmap not found: disabling mmap support")
+        message(WARNING " mmap not found: disabling mmap support")
+	set(LACE_USE_MMAP OFF)
     endif()
 endif()
 
