--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         build_type:
-        - RelWithDebInfo
+        - Release
         - Debug
         cc:
         - { cc: gcc, v: 9, cxx: g++}
@@ -77,7 +77,7 @@ jobs:
       fail-fast: false
       matrix:
         build_type:
-        - RelWithDebInfo
+        - Release
         - Debug
         cc:
         - { cc: gcc, v: 7, cxx: g++, xcode: latest }
