--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -3,6 +3,11 @@ macro(set_compilation_settings NAME)
     set_property(TARGET ${NAME} PROPERTY C_STANDARD 11 CXX_STANDARD 11)
     target_compile_features(${NAME} PRIVATE c_std_11 cxx_std_11)
     target_compile_options(${NAME} PRIVATE -Wall -Wextra -Werror -Wno-deprecated)
+    if (CMAKE_BUILD_TYPE STREQUAL "Release")
+        # set_property(TARGET ${NAME} PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
+        target_compile_options(${NAME} PRIVATE -flto)
+        target_link_options(${NAME} PRIVATE -flto)
+    endif ()
     target_link_libraries(${NAME} PRIVATE m)
 endmacro(set_compilation_settings)
 
