--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,8 +34,13 @@ target_sources(lace PRIVATE src/lace.c PUBLIC src/lace.h)
 target_sources(lace14 PRIVATE src/lace14.c PUBLIC src/lace14.h)
 target_include_directories(lace PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src ${CMAKE_CURRENT_BINARY_DIR})
 target_include_directories(lace14 PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src ${CMAKE_CURRENT_BINARY_DIR})
-target_compile_options(lace PRIVATE -Wall -Wextra -Werror -fno-strict-aliasing)
-target_compile_options(lace14 PRIVATE -Wall -Wextra -Werror -fno-strict-aliasing)
+if(MSVC)
+  target_compile_options(lace PRIVATE /W4 /WX)
+  target_compile_options(lace14 PRIVATE /W4 /WX)
+else()
+  target_compile_options(lace PRIVATE -Wall -Wextra -Werror -fno-strict-aliasing)
+  target_compile_options(lace14 PRIVATE -Wall -Wextra -Werror -fno-strict-aliasing)
+endif()
 target_compile_features(lace PRIVATE c_std_11)
 target_compile_features(lace14 PRIVATE c_std_11)
 target_link_libraries(lace PUBLIC pthread)
