--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -2,7 +2,11 @@ macro(set_compilation_settings NAME)
     target_include_directories(${NAME} PRIVATE ${CMAKE_CURRENT_LIST_DIR})
     set_property(TARGET ${NAME} PROPERTY C_STANDARD 11 CXX_STANDARD 11)
     target_compile_features(${NAME} PRIVATE c_std_11 cxx_std_11)
-    target_compile_options(${NAME} PRIVATE -Wall -Wextra -Werror -Wno-deprecated)
+    if(MSVC)
+        target_compile_options(${NAME} PRIVATE /W4 /WX)
+    else()
+        target_compile_options(${NAME} PRIVATE -Wall -Wextra -Werror -Wno-deprecated)
+    endif()
     if (CMAKE_BUILD_TYPE STREQUAL "Release")
         # set_property(TARGET ${NAME} PROPERTY INTERPROCEDURAL_OPTIMIZATION TRUE)
         target_compile_options(${NAME} PRIVATE -flto)
