Modernize CMake script and allow installation again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,7 @@ project(lace
     LANGUAGES C CXX
 )
 
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/")
-include(CheckSymbolExists)
+list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
 option(LACE_PIE_TIMES "Let Lace record Pie times" OFF)
 option(LACE_COUNT_TASKS "Let Lace record the number of tasks" OFF)
@@ -18,6 +17,7 @@ option(LACE_USE_HWLOC "Let Lace pin threads/memory using libhwloc" OFF)
 option(LACE_USE_MMAP "Let Lace use mmap to allocate memory" ON)
 
 if(LACE_USE_MMAP)
+    include(CheckSymbolExists)
     check_symbol_exists(mmap "sys/mman.h" HAVE_MMAP)
     if(NOT HAVE_MMAP)
         message(WARNING " mmap not found: disabling mmap support")
@@ -25,19 +25,51 @@ if(LACE_USE_MMAP)
     endif()
 endif()
 
-add_library(lace STATIC)
-add_library(lace14 STATIC)
+add_library(lace STATIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/lace.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/lace.h
+)
+add_library(lace14 STATIC
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/lace14.c
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/lace14.h
+)
+
 add_library(lace::lace ALIAS lace)
 add_library(lace::lace14 ALIAS lace14)
 
-target_sources(lace PRIVATE src/lace.c PUBLIC src/lace.h)
-target_sources(lace14 PRIVATE src/lace14.c PUBLIC src/lace14.h)
-target_include_directories(lace PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src ${CMAKE_CURRENT_BINARY_DIR})
-target_include_directories(lace14 PUBLIC ${CMAKE_CURRENT_LIST_DIR}/src ${CMAKE_CURRENT_BINARY_DIR})
-target_compile_options(lace PRIVATE -Wall -Wextra -Werror -fno-strict-aliasing)
-target_compile_options(lace14 PRIVATE -Wall -Wextra -Werror -fno-strict-aliasing)
-target_compile_features(lace PRIVATE c_std_11)
-target_compile_features(lace14 PRIVATE c_std_11)
+target_compile_features(lace PUBLIC c_std_11)
+target_compile_features(lace14 PUBLIC c_std_11)
+
+target_include_directories(lace
+    PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/src>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+        $<INSTALL_INTERFACE:include>
+)
+
+target_include_directories(lace14
+    PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/src>
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+        $<INSTALL_INTERFACE:include>
+)
+
+target_compile_options(lace PRIVATE
+    $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>:
+        -pipe -march=native
+        $<$<CONFIG:Debug>:-O0 -Wall -Wextra -Wpedantic>>
+    $<$<CXX_COMPILER_ID:MSVC>:
+        $<$<CONFIG:Debug>:/Od /Wall /Zi>>
+)
+
+target_compile_options(lace14 PRIVATE
+    $<$<OR:$<CXX_COMPILER_ID:Clang>,$<CXX_COMPILER_ID:GNU>>:
+        -pipe -march=native
+        $<$<CONFIG:Debug>:-O0 -Wall -Wextra -Wpedantic>>
+    $<$<CXX_COMPILER_ID:MSVC>:
+        $<$<CONFIG:Debug>:/Od /Wall /Zi>>
+)
+
 target_link_libraries(lace PUBLIC pthread)
 target_link_libraries(lace14 PUBLIC pthread)
 
@@ -47,7 +79,19 @@ if(LACE_USE_HWLOC)
     target_link_libraries(lace14 PUBLIC ${HWLOC_LIBRARIES})
 endif()
 
-configure_file(src/lace_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/lace_config.h)
+set_target_properties(lace PROPERTIES
+    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib
+    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin
+)
+
+set_target_properties(lace14 PROPERTIES
+    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib
+    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/lib
+    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/bin
+)
+
+configure_file(src/lace_config.h.in ${CMAKE_CURRENT_BINARY_DIR}/lace_config.h @ONLY)
 
 if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
     option(LACE_BUILD_TESTS "Build and run Lace tests" ON)
@@ -64,3 +108,50 @@ if(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
         add_subdirectory(test)
     endif()
 endif()
+
+include(GNUInstallDirs)
+
+install(TARGETS lace lace14
+    EXPORT lace-targets
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+install(FILES 
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/lace.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/src/lace14.h"
+    "${CMAKE_CURRENT_BINARY_DIR}/lace_config.h"
+    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+)
+install(EXPORT lace-targets
+    FILE lace-targets.cmake
+    NAMESPACE lace::
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/lace
+)
+
+include(CMakePackageConfigHelpers)
+
+configure_package_config_file(
+    ${CMAKE_CURRENT_SOURCE_DIR}/cmake/lace-config.cmake.in
+    ${CMAKE_CURRENT_BINARY_DIR}/cmake/lace-config.cmake
+    INSTALL_DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/lace
+)
+
+write_basic_package_version_file(
+    ${CMAKE_CURRENT_BINARY_DIR}/cmake/lace-config-version.cmake
+    VERSION ${LACE_VERSION}
+    COMPATIBILITY SameMinorVersion
+)
+
+install(
+    FILES
+        ${CMAKE_CURRENT_BINARY_DIR}/cmake/lace-config.cmake
+        ${CMAKE_CURRENT_BINARY_DIR}/cmake/lace-config-version.cmake
+    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/lace
+)
+
+export(EXPORT lace-targets
+    FILE ${CMAKE_CURRENT_BINARY_DIR}/cmake/lace-targets.cmake
+    NAMESPACE lace::
+)
